<resources>
    <string name="app_name">Meeple</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="name">Your Name</string>
    <string name="userid">User ID</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="emailoruser">Email or UserID</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="send">Send</string>
    <string name="writemessage">Write a Message...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="block">Block</string>
    <string name="unblock">unblock</string>
</resources>
